REGRESSION (r254669): Expand media button doesn't work on first try on photos on reddit.com https://bugs.webkit.org/show_bug.cgi?id=209590 <rdar://problem/60461809>

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

* web-platform-tests/html/rendering/replaced-elements/attributes-for-embedded-content-and-images/img-aspect-ratio-expected.txt:

Failure here shifts to a different subtest. This one uses fractional pixels and LayoutUnit accuracy is not sufficient to compute the exact ratio.

Source/WebCore:

Image intrinsic size computed from width/height attributes is ignored during preferred width computation
(used for float sizing in this case). This creates a mismatch between layout and preferred width computation,
causing the final image size to be miscomputed.

Test: fast/images/preferred-width-computation-with-attribute-intrinsic-size.html

* rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::computePreferredLogicalWidths const):

Compute attribute based intrinsic size already during preferred width computation if needed.

LayoutTests:

* fast/images/preferred-width-computation-with-attribute-intrinsic-size-expected.html: Added.
* fast/images/preferred-width-computation-with-attribute-intrinsic-size.html: Added.


Canonical link: https://commits.webkit.org/222529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259051 268f45cc-cd09-0410-ab3c-d52691b4dbfc